unpackaged/main/default/objects/litify_pm__Negotiation__c/litify_pm__Negotiation__c.object-meta.xml
<CustomObject>
    <label>Negotiation</label>
    <nameField>
        <label>Negotiation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Negotiations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>