unpackaged/main/default/objects/litify_pm__Negotiation__c/fields/IsTeamMember__c.field-meta.xml
<CustomField>
    <fullName>IsTeamMember__c</fullName>
    <formula>litify_pm__Matter__r.litify_ext__IsTeamMember__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsTeamMember</label>
    <type>Checkbox</type>
</CustomField>