unpackaged/main/default/objects/litify_pm__Negotiation__c/fields/litify_ext__Negotiating_with_Party__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Negotiating_with_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Negotiating with (Party)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Negotiations</relationshipLabel>
    <relationshipName>Negotiations</relationshipName>
    <type>Lookup</type>
</CustomField>