unpackaged/main/default/objects/litify_pm__Negotiation__c/fields/litify_pm__Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>