unpackaged/main/default/objects/litify_pm__Negotiation__c/fields/litify_pm__Negotiating_with__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Negotiating_with__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Negotiating with</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Roles must be associated with the matter related to this record.</errorMessage>
        <filterItems>
            <field>litify_pm__Role__c.litify_pm__Matter__c</field>
            <operation>equals</operation>
            <valueField>$Source.litify_pm__Matter__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>litify_pm__Role__c</referenceTo>
    <relationshipLabel>Negotiations</relationshipLabel>
    <relationshipName>Negotiations</relationshipName>
    <type>Lookup</type>
</CustomField>