unpackaged/main/default/objects/litify_pm__Negotiation__c/fields/litify_pm__Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Demand</fullName>
                <default>true</default>
                <label>Initial Demand</label>
            </value>
            <value>
                <fullName>Initial Offer</fullName>
            </value>
            <value>
                <fullName>Counter Demand</fullName>
            </value>
            <value>
                <fullName>Counter Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>